--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.1.3",
     "cloudinary": "^1.28.1",
     "concurrently": "^7.0.0",
     "cookie-parser": "^1.4.6",
@@ -28,6 +30,8 @@
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "nodemailer": "^6.7.2"
+    "node": "^17.7.1",
+    "nodemailer": "^6.7.2",
+    "reactstrap": "^9.0.1"
   }
 }
