--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "proyect_3",
-  "version": "1.0.0",
+  "name": "kedamosapp",
+  "version": "2.0.0",
   "description": "Integarted web application about creating and managing different recreational activities for a small town.",
   "main": "index.js",
   "scripts": {
@@ -14,27 +14,28 @@
   "author": "Danny Serrano",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.22"
   },
   "dependencies": {
-    "axios": "^0.26.1",
-    "bcrypt": "^5.0.1",
-    "bootstrap": "^5.1.3",
-    "cloudinary": "^1.41.3",
-    "concurrently": "^7.1.0",
-    "cookie-parser": "^1.4.6",
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
+    "concurrently": "^9.1.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "express-fileupload": "^1.3.1",
-    "express-handlebars": "^6.0.2",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.4",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-fileupload": "^1.5.1",
+    "express-handlebars": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "node": "^17.7.1",
-    "nodemailer": "^6.7.2",
-    "reactstrap": "^9.0.1"
+    "multer": "^1.4.5-lts.1",
+    "node": "^22.13.0",
+    "nodemailer": "^6.9.16",
+    "reactstrap": "^9.2.3"
   }
 }
